Alterações do pudim

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
     }
     p{
         text-align:left;
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-family:arial;
     }
     div{
         margin:auto;
@@ -42,22 +42,21 @@
         color:white;
     }
     a:hover{
-        font-size:17.5px;
+        font-size:21px;
     }
     h1{
         text-align:center;
         font-size:50px;
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-family:arial;
         color:white;
     }
     h2{
         text-align:center;
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-family:arial;
         font-size:35px;
     }
     .pcenter{
         text-align:center;
-        
     }
     body{
         background:rgb(206, 74, 74);
@@ -81,11 +80,17 @@
 <body>
    
     <header>
-        <h1>Por que assistir anime ?</h1>
+        <h1>Por que assistir ?</h1>
         <a name="topo"></a>
-        <p id="cab">O blog que te indica os melhores conteudos de animes.</p>
+        <p id="cab">O blog que te indica os melhores conteudos de animes series e filmes.</p>
 
     </header>
+    <nav>
+        <a href="blog.html">Home</a>
+        <a href="login.html">Login</a>
+        <a href="cadastro.html">Cadastrar</a>
+        <a href="contato.html">Contato</a>
+    </nav>
     <nav>
         <a href="#topico1">Tópico 1</a>
         <a href="#topico2">Tópico 2</a>
@@ -113,7 +118,7 @@
                      de situações extremamente dramáticas e que exploram moralidade e ética, situações bastante comuns durante o programa. 
                      O importante é que os dois elementos (especialmente a comédia) não são desnecessários, o que por si só já é bem interessante de ver.</p>
 
-                     <p class="pcenter"><b>Confira um video demonstrativo sobre:</b></p>
+                     <p class="pcenter">Confira um video demonstrativo sobre:</p>
                    
                 <div>
                     <iframe  src="https://www.youtube.com/embed/d6kBeJjTGnY" 
@@ -133,7 +138,10 @@
                     uma criança. Esse ato nobre, acaba por criar uma espécie de conflito acerca do destino de sua alma. 
                     Então, porque não dar uma segunda chance ao garoto? E depois de passar por algumas situações, Yusuke 
                     acaba retornando ao mundo dos vivos com a condição de se tornar detetive espiritual, ou seja, investigando 
-                    e caçando youkais (demônios) infltrados no mundo dos humanos.</p>
+                    e caçando youkais (demônios) infltrados no mundo dos humanos. Além de Yusuke, os personagens mais recorrentes 
+                    são: Kuwabara, Hiei e Kurama, com personalidades únicas e marcantes, tornando o anime muito melhor, não consigo 
+                    imaginar Yu Yu Hakusho sem eles, para mim, são tão protagonistas quanto Yusuke. Particularmente, gosto mais deles 
+                    do que do próprio Yusuke, me condenem se quiser</p>
                 <figure>
                     <img src="img/yuyuhakusho.jpg" alt="Anime yuyuhakusho com personagens">
                 </figure>
@@ -141,13 +149,15 @@
                     poderiam ser muito bem resumidos em no máximo 3 ou 4. Mas, se você conseguir 
                     sobreviver a esse início, vai acabar enfeitiçado e parar de assistir se tornará um desafio. 
                     Falo sério, quando finalmente consegui pegar todos os episódios, tive que assistir seguidamente, 
-                    só parando para as necessidades básicas.</p>
+                    só parando para as necessidades básicas. Talvez as meninas não se empolguem tanto em ver o anime quanto os meninos. 
+                    Afinal, ele é um pouquinho violento.</p>
                 <p>O anime todo é dividido em 4 sagas (detetive espiritual, torneio das trevas, protão do inferno e saga dos três reis) 
                     com total de 112 episódios, além de 1 ova e 1 filme com histórias à parte. Menção mais do que honrosa para a excelente 
                     dublagem brasileira do anime. As adaptações de expressões e gíras ficaram excelentes.
                 </p>
 
-                <p class="pcenter"><b>Confira um video demonstrativo sobre:</b></p>
+                    <p class="pcenter">Confira um video demonstrativo sobre:</p>
+
                 <div>
                     <iframe src="https://www.youtube.com/embed/AtjinyUUh6w" frameborder="0" allow="accelerometer; autoplay; 
                     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -162,9 +172,19 @@
                 <p>A história de Dragon Ball começa com <b>Son Goku</b>, um garoto ingênuo e puro com cauda de macaco e uma força extraordinária. 
                     Ele mora sozinho após a morte de seu avô adotivo em uma montanha chamada Paozu. 
                     Um dia ele conhece Bulma, uma garota muito inteligente da cidade, que estava em busca das sete Esferas do Dragão.
-                    Persuadido, Goku concorda em ajudar Bulma a encontrar as Esferas. Os dois partem em uma longa jornada, durante a qual 
-                    eles fazem muitos amigos.
                 </p>
+                <p>Persuadido, Goku concorda em ajudar Bulma a encontrar as Esferas. Os dois partem em uma longa jornada, durante a qual 
+                    eles fazem muitos amigos. Depois, Goku passa por um treinamento com Kame-Sennin, onde o garoto Kuririn se torna seu 
+                    parceiro, e participa de vários torneios mundiais de artes marciais. No curso de seu crescimento e seu desenvolvimento, 
+                    ele enfrenta inúmeros inimigos, incluindo Piccolo, que depois se torna seu aliado. Quando jovem adulto, 
+                    Goku se casa com Chi-Chi, cumprindo uma promessa feita por ele quando ambos eram crianças, e possui seu primeiro 
+                    filho chamado Gohan.Goku acaba descobrindo que pertence à raça extraterrestre Saiyajin, e que foi enviado 
+                    à Terra quando criança para conquistar o planeta. </p>
+                <p>Pouco depois de sua chegada, no entanto, ele tinha sofrido um 
+                    ferimento na cabeça, perdendo desta forma a memória da missão e sua natureza agressiva. No entanto, o jovem decide 
+                    ontinuar a defender seu planeta adotado do ataque de inimigos cada vez mais difíceis, incluindo o príncipe dos sayajins 
+                    Vegeta, que depois também se torna seu aliado. Desta forma, juntamente com sua família e seus amigos, Goku luta contra 
+                    migos como Freeza, Cell, Boo, entre outros, se tornando o protetor da Terra e todo o universo.</p>
                 <figure>
                     <img src="img/dragonball.jpg" alt="Imagem do anime Dragon ball">
                 </figure>
@@ -173,9 +193,10 @@
                     É tudo sobre Goku crescer, e a raça dos sayajins. 
                     É mais sobre suas aventuras e ele viajando por todo o mundo e lutando com diversos inimigos. 
                     Você aprende tudo sobre os vários personagens e o mundo interessante que ocorre tudo e se apega a eles. 
+                    Também você pode ver todas as origens dos personagens originais, como Kuririn, Yamcha, Tien, Bulma, mestre Roshi, Piccolo e o resto dos lutadores Z.
                     Alem dos diversos vilões que tornam as lutas e o enredo o mais engraçado e ao mesmo tempo com toda a ação possivel.
                 </p>
-                <p class="pcenter"><b>Confira um video demonstrativo sobre:</b></p>
+                <p class="pcenter">Confira um video demonstrativo sobre:</p>
                 <div>
                     <iframe src="https://www.youtube.com/embed/EzN5SW2QOWY" frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
